--- a/second.html
+++ b/second.html
@@ -8,5 +8,6 @@
 <body>
     <h1>heyy its me</h1>
     <h2>my new version</h2>
+    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, commodi explicabo! Facilis, quam! Dignissimos, architecto? Beatae nam asperiores recusandae debitis, explicabo modi voluptas placeat! Vero quo similique minima quos nam.</p>
 </body>
 </html>
